Modificacion de readme

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+# ElQuintoSolMarketing
+Sitio personalizado para el cliente del Quinto Sol Marketing
+
 ## Table of Contents
 1. [General Info](#general-info)
 2. [Technologies](#technologies)
